k8s/complex-api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: complex-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: api
          image: ajduet/complex-api
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
