k8s/complex-client.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: ajduet/complex-client:v3
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: '128Mi'
              cpu: '250m'
