k8s/complex-worker.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: complex-worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: ajduet/complex-worker
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
