k8s/complex-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-cluster-service
spec:
  type: ClusterIP
  selector:
    component: api
  ports:
    - port: 5000
      targetPort: 5000
