k8s/complex-client.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 3000
      targetPort: 3000
